added DM method

--- a/docs/examples/fN_examples.ipynb
+++ b/docs/examples/fN_examples.ipynb
@@ -503,6 +503,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## DM (Dispersion Measure)\n",
+    "\n",
+    "This is trivial and does not depend on $f(N)$ for now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using a Planck15 cosmology with H0=67.74 km / (Mpc s) and Om=0.3075 and Ob=0.0486\n",
+      "1235.87279603 pc / cm3\n"
+     ]
+    }
+   ],
+   "source": [
+    "reload(teff)\n",
+    "DM = teff.DM(1.)\n",
+    "print(DM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## $\\tau_{\\rm eff}^{\\rm Lyman}$"
    ]
   },
