--- a/docs/examples/fN_examples.ipynb
+++ b/docs/examples/fN_examples.ipynb
@@ -534,17 +534,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mp"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -553,11 +542,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rho_HI = 8.35538e+07 solMass / Mpc3\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate\n",
     "rho_HI = fN_default.calculate_rhoHI(z, (20.3, 22.))\n",
