--- a/docs/examples/CGM_examples.ipynb
+++ b/docs/examples/CGM_examples.ipynb
@@ -671,13 +671,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "spec = cos_halos.load_gal_spec(('J0928+6025','110_35'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$[3099.0423,~3100.1435,~3101.2452,~\\dots, 8865.8712,~8867.453,~8869.0343] \\; \\mathrm{\\mathring{A}}$"
+      ],
+      "text/plain": [
+       "<Quantity [ 3099.0422966 , 3100.14348937, 3101.24520915,...,\n",
+       "            8865.87116804, 8867.45297197, 8869.03426124] Angstrom>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spec.wavelength"
    ]
   },
   {
