edits following miki

--- a/docs/examples/DLASurvey_examples.ipynb
+++ b/docs/examples/DLASurvey_examples.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -326,6 +326,95 @@
    ],
    "source": [
     "h100 = DLASurvey.neeleman13_tree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm. [astropy.units.format.utils]\n",
+      "WARNING:astropy:UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton03_table2.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton00_table2.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner96_tab1.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner94_tab6.fits"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/EUV_lines.ascii\n",
+      "read_sets: Using set file -- \n",
+      "  /Users/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.0.ascii\n",
+      "WARNING: Using 1670.7886 Angstrom for your input 1670.7874 Angstrom\n",
+      "WARNING: Using 2056.2569 Angstrom for your input 2056.2539 Angstrom\n",
+      "> /Users/xavier/local/Python/pyigm/pyigm/abssys/dla.py(126)get_ions()\n",
+      "-> components = ltigu.build_components_from_abslines([],\n",
+      "(Pdb) self._clmdict\n",
+      "{u'flg_data': 3, u'lines': {1206.5: <AbsLine: SiIII 1206, wrest=1206.5000 Angstrom>, 1144.9379: <AbsLine: FeII 1144, wrest=1144.9379 Angstrom>, 1550.77: <AbsLine: CIV 1550, wrest=1550.7700 Angstrom>, 1199.5496: <AbsLine: NI 1199, wrest=1199.5496 Angstrom>, 1854.7164: <AbsLine: AlIII 1854, wrest=1854.7164 Angstrom>, 1260.4221: <AbsLine: SiII 1260, wrest=1260.4221 Angstrom>, 1302.1685: <AbsLine: OI 1302, wrest=1302.1685 Angstrom>, 1670.7874: <AbsLine: AlII 1670, wrest=1670.7886 Angstrom>, 988.7734: <AbsLine: OI 988, wrest=988.7734 Angstrom>, 1560.3092: <AbsLine: CI 1560, wrest=1560.3092 Angstrom>, 1608.4511: <AbsLine: FeII 1608, wrest=1608.4511 Angstrom>, 1808.013: <AbsLine: SiII 1808, wrest=1808.0129 Angstrom>, 1548.195: <AbsLine: CIV 1548, wrest=1548.1950 Angstrom>, 1526.7066: <AbsLine: SiII 1526, wrest=1526.7070 Angstrom>, 2056.2539: <AbsLine: CrII 2056, wrest=2056.2569 Angstrom>, 1862.7895: <AbsLine: AlIII 1862, wrest=1862.7895 Angstrom>, 1402.77: <AbsLine: SiIV 1402, wrest=1402.7700 Angstrom>}, u'NHI': 20.45, u'ion_fil': 'Abund/Tables/PSS0209+0517.z366.ion', u'sigNHI': 0.1, u'fixabund': {}, u'zsys': 3.6662, u'fits_files': {1: '~/Keck/HIRES/RedData/PSS0209+0517/PSS0209+0517a_f.fits', 2: '~/Keck/ESI/RedData/PSS0209+0517/PSS0209+0517_f.fits'}}\n",
+      "(Pdb) exit\n"
+     ]
+    },
+    {
+     "ename": "BdbQuit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBdbQuit\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-d55ff2029a9f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mh100\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfill_ions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muse_Nfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/xavier/local/Python/pyigm/pyigm/surveys/igmsurvey.pyc\u001b[0m in \u001b[0;36mfill_ions\u001b[0;34m(self, use_Nfile, jfile, debug)\u001b[0m\n\u001b[1;32m    260\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mdebug\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m                     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs_sys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 262\u001b[0;31m                 \u001b[0mabs_sys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_ions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muse_Nfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    263\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    264\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Not sure how to load the ions\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/xavier/local/Python/pyigm/pyigm/abssys/dla.pyc\u001b[0m in \u001b[0;36mget_ions\u001b[0;34m(self, use_Nfile, idict, update_zvlim, linelist)\u001b[0m\n\u001b[1;32m    124\u001b[0m             \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m             \u001b[0;31m# Build components\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m             components = ltigu.build_components_from_abslines([],\n\u001b[0m\u001b[1;32m    127\u001b[0m                                                               \u001b[0mclmdict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_clmdict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m                                                               \u001b[0mcoord\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoord\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/xavier/local/Python/pyigm/pyigm/abssys/dla.pyc\u001b[0m in \u001b[0;36mget_ions\u001b[0;34m(self, use_Nfile, idict, update_zvlim, linelist)\u001b[0m\n\u001b[1;32m    124\u001b[0m             \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m             \u001b[0;31m# Build components\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m             components = ltigu.build_components_from_abslines([],\n\u001b[0m\u001b[1;32m    127\u001b[0m                                                               \u001b[0mclmdict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_clmdict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m                                                               \u001b[0mcoord\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoord\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/xavier/anaconda/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mtrace_dispatch\u001b[0;34m(self, frame, event, arg)\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;31m# None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'line'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'call'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/xavier/anaconda/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mdispatch_line\u001b[0;34m(self, frame)\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbreak_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquitting\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mBdbQuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mBdbQuit\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "h100.fill_ions(use_Nfile=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "    with io.open('HD-LLS_ions.json', 'w', encoding='utf-8') as f:\n",
+    "        f.write(unicode(json.dumps(all_ions, sort_keys=True, indent=4, \n",
+    "            separators=(',', ': '))))"
    ]
   },
   {
