more reading dicts..

--- a/docs/examples/LLSSurvey_examples.ipynb
+++ b/docs/examples/LLSSurvey_examples.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -331,7 +331,49 @@
       "HD-LLS: Loading ions file /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_ions.json\n",
       "HD-LLS: Loading transitions from /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_clms.tar.gz\n",
       "HD-LLS: Loading metallicity file /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_DR1_dustnhi.hdf5\n",
-      "Skipping a likely folder: CLMS\n",
+      "Skipping a likely folder: CLMS"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm. [astropy.units.format.utils]\n",
+      "WARNING:astropy:UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton03_table2.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton00_table2.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner96_tab1.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner94_tab6.fits"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/EUV_lines.ascii\n",
+      "read_sets: Using set file -- \n",
+      "  /Users/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.0.ascii\n",
       "Skipping HD-LLS_J024447.78-081606.1_z3.953, not statistical in DR1\n",
       "Skipping HD-LLS_J094932.27+033531.7_z3.929, not statistical in DR1\n",
       "Skipping HD-LLS_J095852.20+120245.0_z3.096, not statistical in DR1\n",
@@ -347,7 +389,7 @@
     "# Grabs HD-LLS files locally or from the website, as needed\n",
     "# Includes metallicity PDFs from Fumagalli+16\n",
     "reload(llss)\n",
-    "hdlls = llss.LLSSurvey.load_HDLLS()"
+    "hdlls = llss.LLSSurvey.load_HDLLS(skip_trans=False)"
    ]
   },
   {
@@ -489,7 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Metallicity PDFs"
+    "### Metallicity PDFs (Fumagalli+16, MNRAS, 455, 4100)"
    ]
   },
   {
