--- a/docs/examples/DLASurvey_examples.ipynb
+++ b/docs/examples/DLASurvey_examples.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -368,70 +368,11 @@
       "H100: Loading transitions file /Users/xavier/local/Python/pyigm/pyigm/data/DLA/H100/H100_DLA_clms.tar.gz\n",
       "Skipping a likely folder: CLMS"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm. [astropy.units.format.utils]\n",
-      "WARNING:astropy:UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton03_table2.fits.gz\n",
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton00_table2.fits.gz\n",
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner96_tab1.fits.gz\n",
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner94_tab6.fits"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /Users/xavier/local/Python/linetools/linetools/data/lines/EUV_lines.ascii\n",
-      "read_sets: Using set file -- \n",
-      "  /Users/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.0.ascii\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abssystem.py:193: UserWarning: Input AbsComponent with does not match AbsSystem rules. Not appending\n",
-      "  warnings.warn('Input AbsComponent with does not match AbsSystem rules. Not appending')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IGMSurvey: nsys=100, type=DLA, ref=Neeleman+13>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "h100 = dlasrv.DLASurvey.load_H100()\n",
+    "reload(dlasrv)\n",
+    "h100 = dlasrv.DLASurvey.load_H100(skip_trans=False)\n",
     "h100"
    ]
   },
