LLS survey work

--- a/docs/examples/DLASurvey_examples.ipynb
+++ b/docs/examples/DLASurvey_examples.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -366,8 +366,18 @@
       "H100: Loading summary file /Users/xavier/local/Python/pyigm/pyigm/data/DLA/H100/H100_DLA.fits\n",
       "H100: Loading ions file /Users/xavier/local/Python/pyigm/pyigm/data/DLA/H100/H100_DLA_ions.json\n",
       "H100: Loading transitions file /Users/xavier/local/Python/pyigm/pyigm/data/DLA/H100/H100_DLA_clms.tar.gz\n",
-      "Skipping a likely folder: CLMS"
+      "Skipping a likely folder: CLMS\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IGMSurvey: nsys=100, type=DLA, ref=Neeleman+13>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
