--- a/docs/examples/LLSSurvey_examples.ipynb
+++ b/docs/examples/LLSSurvey_examples.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -329,9 +329,14 @@
      "text": [
       "HD-LLS: Loading summary file /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_DR1.fits\n",
       "HD-LLS: Loading ions file /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_ions.json\n",
-      "HD-LLS: Loading transitions from /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_clms.tar.gz\n",
       "HD-LLS: Loading metallicity file /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_DR1_dustnhi.hdf5\n",
-      "Skipping a likely folder: CLMS"
+      "HD-LLS: Loading systems from /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_sys.tar.gz\n",
+      "Skipping a likely folder: SYS\n",
+      "> /Users/xavier/local/Python/pyigm/pyigm/surveys/llssurvey.py(153)load_HDLLS()\n",
+      "-> abssys = LLSSystem.from_dict(tdict)\n",
+      "(Pdb) abssys\n",
+      "*** NameError: name 'abssys' is not defined\n",
+      "(Pdb) abssys = LLSSystem.from_dict(tdict)\n"
      ]
     },
     {
@@ -346,7 +351,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "linetools.lists.parse: Reading linelist --- \n",
       "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton03_table2.fits.gz\n",
       "linetools.lists.parse: Reading linelist --- \n",
@@ -374,14 +378,44 @@
       "   /Users/xavier/local/Python/linetools/linetools/data/lines/EUV_lines.ascii\n",
       "read_sets: Using set file -- \n",
       "  /Users/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.0.ascii\n",
-      "Skipping HD-LLS_J024447.78-081606.1_z3.953, not statistical in DR1\n",
-      "Skipping HD-LLS_J094932.27+033531.7_z3.929, not statistical in DR1\n",
-      "Skipping HD-LLS_J095852.20+120245.0_z3.096, not statistical in DR1\n",
-      "Skipping HD-LLS_J145649.83-193852.0_z3.001, not statistical in DR1\n",
-      "Skipping HD-LLS_J221851.30-615054.2_z3.111, not statistical in DR1\n",
-      "Skipping HD-LLS_J234625.67-001600.4_z3.176, not statistical in DR1\n",
-      "Skipping HD-LLS_J234855.40-144436.6_z2.819, not statistical in DR1\n",
-      "Skipping HD-LLS_J235808.60+012506.0_z3.076, not statistical in DR1\n"
+      "***"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:221: UserWarning: Input absline with wrest=1335.71 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " AttributeError: 'float' object has no attribute 'to'\n",
+      "(Pdb) abssys\n",
+      "*** NameError: name 'abssys' is not defined\n",
+      "(Pdb) 144-128\n",
+      "16\n",
+      "(Pdb) 5750.-2340*0.53\n",
+      "4509.8\n",
+      "(Pdb) exit\n"
+     ]
+    },
+    {
+     "ename": "BdbQuit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBdbQuit\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-56b69460894b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Includes metallicity PDFs from Fumagalli+16\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mllss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mhdlls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mllss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLLSSurvey\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_HDLLS\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskip_trans\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/xavier/local/Python/pyigm/pyigm/surveys/llssurvey.pyc\u001b[0m in \u001b[0;36mload_HDLLS\u001b[0;34m(cls, grab_spectra, skip_trans)\u001b[0m\n\u001b[1;32m    151\u001b[0m                     \u001b[0mtdict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m                     \u001b[0;31m# Find system\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 153\u001b[0;31m                     \u001b[0mi0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmember\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    154\u001b[0m                     \u001b[0mi1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmember\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m                     \u001b[0;31m# Generate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/xavier/local/Python/pyigm/pyigm/surveys/llssurvey.pyc\u001b[0m in \u001b[0;36mload_HDLLS\u001b[0;34m(cls, grab_spectra, skip_trans)\u001b[0m\n\u001b[1;32m    151\u001b[0m                     \u001b[0mtdict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m                     \u001b[0;31m# Find system\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 153\u001b[0;31m                     \u001b[0mi0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmember\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    154\u001b[0m                     \u001b[0mi1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmember\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m                     \u001b[0;31m# Generate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/xavier/anaconda/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mtrace_dispatch\u001b[0;34m(self, frame, event, arg)\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;31m# None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'line'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'call'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/xavier/anaconda/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mdispatch_line\u001b[0;34m(self, frame)\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbreak_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquitting\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mBdbQuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mBdbQuit\u001b[0m: "
      ]
     }
    ],
@@ -390,6 +424,19 @@
     "# Includes metallicity PDFs from Fumagalli+16\n",
     "reload(llss)\n",
     "hdlls = llss.LLSSurvey.load_HDLLS(skip_trans=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "## Test writing\n",
+    "tdict = hdlls._abs_sys[0].to_dict()\n",
+    "tdict"
    ]
   },
   {
