--- a/docs/examples/DLASurvey_examples.ipynb
+++ b/docs/examples/DLASurvey_examples.ipynb
@@ -605,13 +605,154 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from linetools import utils as ltu\n",
+    "from pyigm.abssys.lls import LLSSystem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sys_dict = ltu.loadjson('/u/xavier/Dropbox/Public/LLS/HD-LLS/HD-LLS_J103456.31+035859.3_z2.849.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm. [astropy.units.format.utils]\n",
+      "WARNING:astropy:UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton03_table2.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton00_table2.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner96_tab1.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner94_tab6.fits"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/EUV_lines.ascii\n",
+      "read_sets: Using set file -- \n",
+      "  /Users/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.0.ascii\n"
+     ]
+    }
+   ],
+   "source": [
+    "lls = LLSSystem.from_dict(sys_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<LLSSystem: 10:34:56.31 +03:58:59.3, zabs=2.8487, logNHI=19.6, tau_LL=252.367, [Z/H]=0 dex>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'FLAGS': [0, 144],\n",
+       " u'datafile': u'',\n",
+       " u'do_analysis': 1,\n",
+       " u'flag_kin': 0,\n",
+       " u'flg_eye': 0,\n",
+       " u'flg_inst': 144,\n",
+       " u'flg_limit': 0,\n",
+       " u'name': u'CI 1656',\n",
+       " u'spec': None,\n",
+       " u'vlim': <Quantity [-28., 38.] km / s>,\n",
+       " u'wvlim': <Quantity [ 0., 0.] Angstrom>}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lls._components['CII']._abslines['1334'].analy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "tmp ="
+   ]
   }
  ],
  "metadata": {
