--- a/docs/examples/MetallicityPDF_examples.ipynb
+++ b/docs/examples/MetallicityPDF_examples.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -353,7 +353,7 @@
        "<MetallicityPDF: meanZH=-1.76384>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,6 +363,60 @@
     "j2315_pdf = pympdf.MetallicityPDF(fh5['met']['left_edge_bins']+fh5['met']['left_edge_bins'].attrs['BINSIZE']/2., \n",
     "                               fh5['met']['J231543.56+145606_z2.943'])\n",
     "j2315_pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add two"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<MetallicityPDF: meanZH=-2.33244>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "j0034_pdf = pympdf.MetallicityPDF(fh5['met']['left_edge_bins']+fh5['met']['left_edge_bins'].attrs['BINSIZE']/2., \n",
+    "                               fh5['met']['J003454.8+163920_z3.754'])\n",
+    "j0034_pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<MetallicityPDF: meanZH=-2.04814>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_pdf = j2315_pdf + j0034_pdf\n",
+    "two_pdf"
    ]
   },
   {
